support for format 3 and 4 instructions, as well as a few assembler directives.. object code generation for those fmts as well

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,16 @@
 # add sources
-SET(SRCS instruction.cpp parser.cpp symbol.cpp symbol_manager.cpp main.cpp)
+SET(SRCS
+    parser.cpp
+    symbol.cpp
+    symbol_manager.cpp
+    instruction.cpp
+    fmt1_instruction.cpp
+    fmt2_instruction.cpp
+    fmt3_instruction.cpp
+    fmt4_instruction.cpp
+    directive.cpp
+    instruction_factory.cpp
+    main.cpp)
 
 # the executable
 ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
