support for program blocks using a USE assembler directive

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(SRCS
     operands/constant.cpp
     operands/expression.cpp
     operands/symbol.cpp
+    program_block.cpp
     symbol_manager.cpp
     instruction.cpp
     instructions/fmt1_instruction.cpp
